--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,9 +5,20 @@
 {% endblock %}
 
 {% block navbar %}
-    <nav class="navbar navbar-default">
-        ... navigation bar here (see complete code on GitHub) ...
-    </nav>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            ... home and explore links ...
+        </ul>
+        {% if g.search_form %}
+        <form class="navbar-form navbar-left" method="get"
+                action="{{ url_for('main.search') }}">
+            <div class="form-group">
+                {{ g.search_form.q(size=20, class='form-control',
+                    placeholder=g.search_form.q.label.text) }}
+            </div>
+        </form>
+        {% endif %}
+    </div>
 {% endblock %}
 
 {% block content %}
